--- a/src/app/core/components/master/header/header.component.html
+++ b/src/app/core/components/master/header/header.component.html
@@ -1,1 +1,20 @@
-<p>header works!</p>
+<div class="d-flex justify-content-between align-items-center h-100 container">
+    <div class="d-flex">
+        <img src="../../../../../assets/images/logo.svg" alt="logo">
+        <ul class="nav flex-md-row flex-column ms-5">
+            <li class="nav-item px-2">
+                <a class="nav-link" role="button">Feature</a>
+            </li>
+            <li class="nav-item px-2">
+                <a class="nav-link" role="button">Pricing</a>
+            </li>
+            <li class="nav-item px-2">
+                <a class="nav-link" role="button">Resoures</a>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <span role='button'> Login </span>
+        <button class="btn btn-primary ms-4 text-white rounded-pill"> Sign Up </button>
+    </div>
+</div>
