--- a/src/app/landing-page/landing-page-container/landing-page-container.component.html
+++ b/src/app/landing-page/landing-page-container/landing-page-container.component.html
@@ -1,1 +1,4 @@
-<p>landing-page-container works!</p>
+<app-landing-page-presentation
+    (emitFormData)="emitFormData($event)"
+    [urlData]="getUrl$ | async"
+></app-landing-page-presentation>
