--- a/src/assets/scss/base/_colors.scss
+++ b/src/assets/scss/base/_colors.scss
@@ -1,8 +1,33 @@
 // Theme Colors
-$primary                                    : #03474a;
-$secondary                                  : #2fc3af;
+$primary                                    : #2acfcf;
+$secondary                                  : #232127;
 $white                                      : #fff;
 $success                                    : #1eca1a;
 $danger                                     : #e43536;
 $warning                                    : #ffc400;
 $info                                       : #8d63d3;
+
+// nav 
+$nav-link-color                             : grey;
+$nav-link-hover-color                       : #000;
+
+// text 
+$sub-text-color                             : grey;
+
+// heading 
+$headings-color                             : $secondary;
+
+// cards 
+$card-bg                                    : $white;
+$card-color                                 : grey;
+
+// list 
+$list-group-bg                              : transparent;
+$list-group-color                           : grey;
+$list-group-border-width                    : 0;
+$list-group-hover-bg                        : $secondary;
+
+// form 
+$input-border-color                         : $white;
+$input-focus-border-color                   : none;
+$input-btn-focus-box-shadow                 : 0;
