--- a/src/assets/scss/component/_scrollbar.scss
+++ b/src/assets/scss/component/_scrollbar.scss
@@ -1,6 +1,7 @@
 ::-webkit-scrollbar {
-    width: 2px;
+    width: 3px;
     height: 2px;
+    z-index: 999;
 
     &-thumb {
         background-color: $primary;
