--- a/src/assets/scss/utilities/_text.scss
+++ b/src/assets/scss/utilities/_text.scss
@@ -1,2 +1,6 @@
 // Typographical styles goes here
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+
+.sub-title{
+    color: $sub-text-color;
+}
