--- a/src/app/core/components/master/master.component.html
+++ b/src/app/core/components/master/master.component.html
@@ -1,1 +1,11 @@
-<p>master works!</p>
+<div class="h-100 position-relative overflow-auto user-select-none">
+    <div id="header" class="position-fixed w-100 bg-white shadow-sm">
+        <app-header></app-header>
+    </div>
+    <div>
+        <router-outlet></router-outlet>
+    </div>
+    <div id="footer">
+        <app-footer></app-footer>
+    </div>
+</div>
