--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -11,3 +11,44 @@ body {
     height: 100%;
     overflow: hidden;
 }
+
+.statistic-container {
+    background-color: #f0f1f6;
+    padding: 7rem 0;
+}
+
+section {
+    padding: 10rem 0;
+}
+
+figure {
+    background-color: #3a3154;
+    width: 80px;
+    height: 80px;
+    top: -40px;
+    left: 30px;
+    
+    @media (max-width: 992px){
+        left: 38%;
+    }
+}
+
+.starter-container {
+    background-image: url('../../images/bg-shorten-desktop.svg');
+    background-size: contain;
+    background-position: center;
+    background-color: #3a3152;
+}
+
+.translate-50{
+    transform: translateY(50px);
+}
+
+.translate-100{
+    transform: translateY(100px);
+}
+
+.invalid-text{
+    bottom: 15px;
+    font-style: italic;
+}
