--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -2,3 +2,27 @@
 
 // font 
 $font-family                                                : 'Poppins', sans-serif;
+
+// nav 
+$nav-link-font-weight                                       : 700;
+$nav-link-transition                                        : 0.4s all;
+
+// button
+$btn-padding-x                                              : 2rem;
+$btn-padding-y                                              : 0.8rem;
+
+// header 
+$header-height                                              : 80px;
+
+// heading
+$headings-font-weight                                       : 700;
+$headings-margin-bottom                                     : 0;
+
+// cards 
+$card-border-width                                          : 0;
+$card-spacer-x                                              : 30px;
+$card-spacer-y                                              : 30px;
+
+// form 
+$input-padding-y                                            : 0.6rem;
+$input-border-width                                         : 5px;
