feat: login dev complete with responsive

--- a/src/app/core/components/master/header/header.component.html
+++ b/src/app/core/components/master/header/header.component.html
@@ -14,7 +14,7 @@
         </ul>
     </div>
     <div>
-        <span role='button'> Login </span>
-        <button class="btn btn-primary ms-4 text-white rounded-pill"> Sign Up </button>
+        <span role='button' routerLink="/login"> Login </span>
+        <button class="btn btn-primary ms-4 text-white rounded-pill" type="button" routerLink="/login"> Sign Up </button>
     </div>
 </div>
