--- a/src/assets/scss/base/_colors.scss
+++ b/src/assets/scss/base/_colors.scss
@@ -28,6 +28,7 @@ $list-group-border-width                    : 0;
 $list-group-hover-bg                        : $secondary;
 
 // form 
-$input-border-color                         : $white;
+$input-border-color                         : $primary;
 $input-focus-border-color                   : none;
+$input-focus-bg                             : #e8f0fd;
 $input-btn-focus-box-shadow                 : 0;
