--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,1 +1,57 @@
-<p>login works!</p>
+<div class="h-100 row">
+    <div class="col-12 col-lg-6">
+        <div class="p-5 d-flex justify-content-between h-100 flex-column">
+            <figure>
+                <img src="../../../../assets/images/logo.svg" alt="logo">
+            </figure>
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="login-container">
+                    <h1 class="text-center"> Welcome back </h1>
+                    <div class="text-center pb-4"> Please enter your credentials </div>
+                    <form class="mb-3" [formGroup]="loginGroup" (ngSubmit)="onSubmit()">
+                        <div class="mb-3">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <label for="userName" class="form-label"> Username </label>
+                                <span class="text-danger"
+                                    *ngIf="getControls['userName']?.errors?.['required'] && getControls['userName'].touched">
+                                    This feild is required </span>
+                                <span class="text-danger"
+                                    *ngIf="getControls['userName']?.errors?.['maxLength'] && getControls['userName'].touched">
+                                    Max should be 15 Characters </span>
+                            </div>
+                            <input type="text" name="userName" id="userName" class="form-control"
+                                formControlName="userName"
+                                [ngClass]="getControls['userName'].invalid && getControls['userName'].touched ? 'border-danger' : 'border'">
+                        </div>
+                        <div class="mb-5">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <label for="password" class="form-label"> Password </label>
+                                <span class="text-danger"
+                                    *ngIf="getControls['password']?.errors?.['required'] && getControls['password'].touched">
+                                    This feild is required </span>
+                            </div>
+                            <div class="position-relative">
+                                <input [type]="passwordInput" name="password" id="password" class="form-control"
+                                    formControlName="password"
+                                    [ngClass]="getControls['password'].invalid && getControls['password'].touched ? 'border-danger' : 'border'">
+                                <span class="password-icon text-muted fs-4 position-absolute" role="button"
+                                    (click)="onShow()">
+                                    <i class='bx bxs-bullseye'></i>
+                                </span>
+                            </div>
+                        </div>
+                        <button class="btn btn-primary w-100 text-white" type="submit" [disabled]="!loginGroup.valid"> Login </button>
+                    </form>
+                    <div class="text-center"> Don't have an account? <span class="text-primary" role="button"
+                            routerLink="/registration"> Signup </span> </div>
+                </div>
+            </div>
+            <div class="text-muted"> © Shortly 2023 </div>
+        </div>
+    </div>
+    <div class="col-6 d-none d-lg-block overflow-hidden">
+        <div class="d-flex statistic-container p-0 align-items-center justify-content-center h-100">
+            <img src="../../../../assets/images/illustration-working.svg" class="image-fluid login-img" alt="worker">
+        </div>
+    </div>
+</div>
