--- a/src/app/core/components/master/footer/footer.component.html
+++ b/src/app/core/components/master/footer/footer.component.html
@@ -1,7 +1,6 @@
 <div class="container d-flex justify-content-between flex-md-row flex-column py-5">
     <h1 class="text-white"> Shortly </h1>
     <div class="my-md-0 my-4 d-flex">
-
         <ul class="list-group">
             <li class="list-group-item text-white">Feature</li>
             <li class="list-group-item">Link Shortening</li>
@@ -23,7 +22,7 @@
         </ul>
     </div>
     <div class="d-flex justify-content-center">
-        <figure class="fs-6 bg-transparent" role="button" *ngFor="let data of socialMedia">
+        <figure class="fs-6 bg-transparent mx-3" role="button" *ngFor="let data of socialMedia">
             <img [src]="data.class" [alt]="data.altName">
         </figure>
     </div>
