--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -69,3 +69,19 @@ section {
 .login-img{
     transform: translateX(200px);
 }
+
+.registration{
+
+    &-form{
+        width: 800px;
+
+        @media (max-width: 768px){
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &-container{
+        background-color: lighten($primary, 40);
+    }
+}
